docs/7.57/md/abensap_hana_access_xsa.md
---
title: "Access to SAP HANA XSA Objects"
description: |
  SAP HANA XSA(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxsa_glosry.htm 'Glossary Entry') (SAP HANA extended application services, advanced model) is the successor version of SAP HANA XSC(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxsc_glosry.htm 'Glossary E
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_hana_access_xsa.htm"
abapFile: "abensap_hana_access_xsa.htm"
keywords: ["do", "if", "case", "try", "method", "data", "abensap", "hana", "access", "xsa"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing External Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_language_external_data.htm) →  [ABAP Database Access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_access.htm) →  [ABAP and SAP HANA](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_hana.htm) →  [Access to Objects in SAP HANA XS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_hana_access.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Access to SAP HANA XSA Objects, ABENSAP_HANA_ACCESS_XSA, 757%0D%0A%0D%0AError:%0D%0A%
0D%0A%0D%0A%0D%0ASuggestion for improvement:)

Access to SAP HANA XSA Objects

[SAP HANA XSA](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxsa_glosry.htm "Glossary Entry") (SAP HANA extended application services, advanced model) is the successor version of [SAP HANA XSC](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxsc_glosry.htm "Glossary Entry").

[SAP Web IDE for SAP HANA](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_web_ide_for_sap_han_glosry.htm "Glossary Entry") and [SAP HANA Cockpit](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_hana_cockpit_glosry.htm "Glossary Entry") are used to develop and manage the native HANA objects in XSA. Deployment usually takes place (using [HDI](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhdi_glosry.htm "Glossary Entry") (SAP HANA Deployment Infrastructure) as [HDI objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhdi_object_glosry.htm "Glossary Entry") in [HDI containers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhdi_container_glosry.htm "Glossary Entry") that usually represent [database schemas](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendatabase_schema_glosry.htm "Glossary Entry") in the [SAP HANA database](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_database_glosry.htm "Glossary Entry").

Special [ABAP-managed HDI container (AMHCs)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamhc_glosry.htm "Glossary Entry") can be defined for [HDI objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhdi_object_glosry.htm "Glossary Entry") accessed from ABAP. [SAP HANA Transport for ABAP (HTA)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhta_glosry.htm "Glossary Entry") links these containers to the [Change and Transport System](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencts_glosry.htm "Glossary Entry"). The definition of an AMHC includes a [logical HDI container](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlogical_hdi_container_glosry.htm "Glossary Entry") that can be specified directly as a [logical schema](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlogical_database_schema_glosry.htm "Glossary Entry") in the [AMDP macro](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_macro_glosry.htm "Glossary Entry") [$ABAP.schema](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_logical_db_schemas.htm). This makes simple access to [HDI objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhdi_object_glosry.htm "Glossary Entry") possible from [AMDP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_glosry.htm "Glossary Entry").

Hints

-   [AMDP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp.htm) methods should be the preferred way of accessing the HDI objects in SAP HANA XSA.
-   If the [AMDP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_glosry.htm "Glossary Entry") methods are not sufficient, [ADBC](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadbc_glosry.htm "Glossary Entry") can also be used to access [HDI objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhdi_object_glosry.htm "Glossary Entry"). In this case, however the physical name of the HDI container is not provided automatically.
-   The access methods designed specifically for [XSC](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxsc_glosry.htm "Glossary Entry") objects in the [SAP HANA Repository](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_hana_repository_glosry.htm "Glossary Entry") are not suitable for XSA objects.